--- a/views/sp-box-template.hbs
+++ b/views/sp-box-template.hbs
@@ -44,22 +44,22 @@
 		<div class="block-27">
 			<ul>
 				{{#paginate pagination type="first"}}
-				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&lt;&lt;</a>
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:submitForm({{n}})">&lt;&lt;</a>
 				</li>
 				{{/paginate}}
 				{{#paginate pagination type="previous"}}
-				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&lt;</a>
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:submitForm({{n}})">&lt;</a>
 				</li>
 				{{/paginate}}
 				{{#paginate pagination type="middle" limit="7"}}
-				<li {{#if active}} class="active" {{/if}}><a href="javascript:page({{n}})">{{n}}</a></li>
+				<li {{#if active}} class="active" {{/if}}><a href="javascript:submitForm({{n}})">{{n}}</a></li>
 				{{/paginate}}
 				{{#paginate pagination type="next"}}
-				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&gt;</a>
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:submitForm({{n}})">&gt;</a>
 				</li>
 				{{/paginate}}
 				{{#paginate pagination type="last"}}
-				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:page({{n}})">&gt;&gt;</a>
+				<li {{#if disabled}}class="disabled" {{/if}}><a href="javascript:submitForm({{n}})">&gt;&gt;</a>
 				</li>
 				{{/paginate}}
 			</ul>
