--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -86,7 +86,7 @@
           {{/if}}
 
           <li class="nav-item cta cta-colored"><a href="/gio-hang" class="nav-link"><span
-                class="icon-shopping_cart"></span>[0]</a></li>
+                class="icon-shopping_cart"></span>[{{session.cart.totalQty}}]</a></li>
         </ul>
       </div>
     </div>
