Add order, check-out, force user login before check-out

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,11 @@
 <title>{{{title}}}</title>
+{{!-- <div class="row">
+    <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
+        <div id="success" class="alert alert-success" {{#if noMessages}}hidden{{/if}}>
+            {{ successMsg }}
+        </div>
+    </div>
+</div> --}}
 <section id="home-section" class="hero">
 	<div class="home-slider owl-carousel">
 		<div class="slider-item" style="background-image: url(images/bg_1.jpg);">
