--- a/views/dang-nhap.hbs
+++ b/views/dang-nhap.hbs
@@ -22,10 +22,24 @@
 					<span class="focus-input100"></span>
 				</div>
 
-				<div class="text-right p-t-13 p-b-23">
+				{{!-- <div class="text-right p-t-13 p-b-23">
 					<a class="txt2" href = "#modalForgotPass" data-toggle="modal">
 						Quên mật khẩu?
 					</a>
+				</div> --}}
+				<div class="text-right p-t-13 p-b-23">
+					<div>
+						<a class="txt2" href = "#modalForgotPass" data-toggle="modal">
+						Quên mật khẩu?
+						</a>	
+					</div>
+					<div>
+						<p> Chưa có tài khoản? 
+							<a class="txt2" href = "/users/dang-ki" data-toggle="modal">
+								Đăng kí ngay!
+							</a>
+						</p>
+					</div>
 				</div>
 
 				<div class="container-login100-form-btn">
@@ -70,14 +84,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="flex-col-c p-t-170 p-b-40">
+				{{!-- <div class="flex-col-c p-t-170 p-b-40">
 					<span class="txt1 p-b-9">
 						Chưa có tài khoản?
 					</span>
 					<a href="users/dang-ki" class="txt3">
 						Đăng kí ngay
 					</a>
-				</div>
+				</div> --}}
 			</form>
 		</div>
 	</div>
