--- a/views/gio-hang.hbs
+++ b/views/gio-hang.hbs
@@ -31,7 +31,7 @@
 						<tbody>
 							{{# each products }}
 							<tr class="text-center">
-								<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
+								<td class="product-remove"><a href="/remove/{{this.item._id}}"><span class="ion-ios-close"></span></a></td>
 
 								<td class="image-prod">
 									<div class="img" style="background-image:url({{this.img}});"></div>
