! sửa không reload page khi thêm vào cart

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -97,7 +97,7 @@
           {{/if}}
 
           <li class="nav-item cta cta-colored"><a href="/gio-hang" class="nav-link"><span
-                class="icon-shopping_cart"></span>[{{session.cart.totalQty}}]</a></li>
+                class="icon-shopping_cart"></span><span id="totalQtyCart">0</span></a></li>
         </ul>
       </div>
     </div>
