--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -95,7 +95,7 @@
 										class="add-to-cart d-flex justify-content-center align-items-center text-center">
 										<span><i class="ion-ios-menu"></i></span>
 									</a>
-									<a href="/add-to-cart/{{this._id}}"
+									<a href="/cart/add-to-cart/{{this._id}}"
 										class="buy-now d-flex justify-content-center align-items-center mx-1">
 										<span><i class="ion-ios-cart"></i></span>
 									</a>
