--- a/views/san-pham.hbs
+++ b/views/san-pham.hbs
@@ -95,11 +95,7 @@
 										class="add-to-cart d-flex justify-content-center align-items-center text-center">
 										<span><i class="ion-ios-menu"></i></span>
 									</a>
-<<<<<<< HEAD
-									<a href="/cart/add-to-cart/{{this._id}}"
-=======
 									<a href="javascript:addToCart('{{_id}}')"
->>>>>>> b4452eb3a7ec86efd703947a81d8836f356ed360
 										class="buy-now d-flex justify-content-center align-items-center mx-1">
 										<span><i class="ion-ios-cart"></i></span>
 									</a>
@@ -202,7 +198,7 @@
 	function addToCart(productId)
 	{
 		var request = new XMLHttpRequest();
-		request.open("GET","/add-to-cart/"+productId,true);
+		request.open("GET","gio-hang/add-to-cart/"+productId,true);
 		request.onreadystatechange = function()
 		{
 			if (this.readyState == 4 && this.status == 200) {
