--- a/views/dang-nhap.hbs
+++ b/views/dang-nhap.hbs
@@ -4,13 +4,11 @@
 <div class="limiter">
 	<div class="container-login100">
 		<div class="wrap-login100">
-			<form class="login100-form validate-form p-l-55 p-r-55 p-t-178" method="post">
+			<form class="login100-form validate-form p-l-55 p-r-55 p-t-178" method="post" name="login">
 				<span class="login100-form-title">
 					Đăng nhập
 				</span>
-				{{#if error }}
-				<span style="color: red; font-size: 2em;">{{error}}</span>
-				{{/if}}
+				<span style="color: red; font-size: 2em;" id="error"></span>
 
 				<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
 					<input class="input100" type="text" name="username" placeholder="Tên đăng nhập">
@@ -21,21 +19,15 @@
 					<input class="input100" type="password" name="password" placeholder="Mật khẩu">
 					<span class="focus-input100"></span>
 				</div>
-
-				{{!-- <div class="text-right p-t-13 p-b-23">
-					<a class="txt2" href = "#modalForgotPass" data-toggle="modal">
-						Quên mật khẩu?
-					</a>
-				</div> --}}
 				<div class="text-right p-t-13 p-b-23">
 					<div>
-						<a class="txt2" href = "#modalForgotPass" data-toggle="modal">
-						Quên mật khẩu?
-						</a>	
+						<a class="txt2" href="#modalForgotPass" data-toggle="modal">
+							Quên mật khẩu?
+						</a>
 					</div>
 					<div>
-						<p> Chưa có tài khoản? 
-							<a class="txt2" href = "/users/dang-ki" data-toggle="modal">
+						<p> Chưa có tài khoản?
+							<a class="txt2" href="/users/dang-ki" data-toggle="modal">
 								Đăng kí ngay!
 							</a>
 						</p>
@@ -43,30 +35,11 @@
 				</div>
 
 				<div class="container-login100-form-btn">
-					<button class="login100-form-btn trigger-btn" href = "#modalLoginSuccess" data-toggle = "modal">
+					<button class="login100-form-btn trigger-btn" href="#modalLoginSuccess" type="submit">
 						Đăng nhập
 					</button>
 				</div>
-				{{!--<div id = "modalLoginSuccess" class="modal fade text-center">
-					<div class="modal-dialog modal-confirm">
-						<div class="modal-content">
-							<div class="modal-header">
-								<div class="icon-box">
-									<i class="material-icons">&#xE876;</i>
-								</div>
-								<h4 class="modal-title">Thành công!</h4>
-							</div>
-							<div class="modal-body">
-								<p class="text-center">Bạn đã đăng nhập thành công
-								</p>
-							</div>
-							<div class="modal-footer">
-								<button class="login100-form-btn trigger-btn" data-dismiss="modal">Tiếp tục</button>
-							</div>
-						</div>
-					</div>
-				</div>--}}
-					<div id = "modalForgotPass" class="modal fade text-center">
+				<div id="modalForgotPass" class="modal fade text-center">
 					<div class="modal-dialog modal-confirm">
 						<div class="modal-content">
 							<div class="modal-header">
@@ -76,25 +49,16 @@
 								<h4 class="modal-title">Quên mật khẩu?</h4>
 							</div>
 							<div class="modal-body">
-                				<input type="text" class="form-control" placeholder="Nhập địa chỉ email">
+								<input type="text" class="form-control" placeholder="Nhập địa chỉ email">
 							</div>
 							<div class="modal-footer">
-								<button class="login100-form-btn trigger-btn" data-dismiss="modal">Đặt lại mật khẩu</button>
+								<button class="login100-form-btn trigger-btn" data-dismiss="modal">Đặt lại mật
+									khẩu</button>
 							</div>
 						</div>
 					</div>
 				</div>
-				{{!-- <div class="flex-col-c p-t-170 p-b-40">
-					<span class="txt1 p-b-9">
-						Chưa có tài khoản?
-					</span>
-					<a href="users/dang-ki" class="txt3">
-						Đăng kí ngay
-					</a>
-				</div> --}}
 			</form>
 		</div>
 	</div>
 </div>
-<script>$("#modalLoginSuccess").empty().append(modalLoginSuccess);
-</script>
