--- a/views/gio-hang.hbs
+++ b/views/gio-hang.hbs
@@ -31,7 +31,7 @@
 						<tbody>
 							{{# each products }}
 							<tr class="text-center">
-								<td class="product-remove"><a href="/remove/{{this.item._id}}"><span class="ion-ios-close"></span></a></td>
+								<td class="product-remove"><a href="/gio-hang/remove/{{this.item._id}}"><span class="ion-ios-close"></span></a></td>
 
 								<td class="image-prod">
 									<div class="img" style="background-image:url({{this.img}});"></div>
@@ -48,51 +48,6 @@
 								<td class="total">&#8363;{{ this.price}}</td>
 							</tr><!-- END TR-->
 							{{/ each }}
-							{{!-- <tr class="text-center">
-								<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-
-								<td class="image-prod">
-									<div class="img" style="background-image:url(images/product-3.jpg);"></div>
-								</td>
-
-								<td class="product-name">
-									<h3>Ớt chuông</h3>
-								</td>
-
-								<td class="price">&#8363;4.900</td>
-
-								<td class="quantity">
-									<div class="input-group mb-3">
-										<input type="text" name="quantity" class="quantity form-control input-number"
-											value="1" min="1" max="100">
-									</div>
-								</td>
-
-								<td class="total">&#8363;4.900</td>
-							</tr><!-- END TR-->
-
-							<tr class="text-center">
-								<td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-
-								<td class="image-prod">
-									<div class="img" style="background-image:url(images/product-4.jpg);"></div>
-								</td>
-
-								<td class="product-name">
-									<h3>Ớt chuông</h3>
-								</td>
-
-								<td class="price">&#8363;15.700</td>
-
-								<td class="quantity">
-									<div class="input-group mb-3">
-										<input type="text" name="quantity" class="quantity form-control input-number"
-											value="1" min="1" max="100">
-									</div>
-								</td>
-
-								<td class="total">&#8363;15.700</td>
-							</tr><!-- END TR--> --}}
 						</tbody>
 					</table>
 				</div>
