--- a/views/thanh-toan.hbs
+++ b/views/thanh-toan.hbs
@@ -7,7 +7,7 @@
 		{{!-- <div id="charge-error" class="alert alert-danger {{#if noError}}hidden{{/if}}">
             {{errMsg}}
         </div> --}}
-		<form action="/thanh-toan" method="post" id="checkout-form" >
+		<form action="/cart/thanh-toan" method="post" id="checkout-form" >
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="form-group">
