--- a/views/gio-hang.hbs
+++ b/views/gio-hang.hbs
@@ -31,7 +31,7 @@
 						<tbody>
 							{{# each products }}
 							<tr class="text-center">
-								<td class="product-remove"><a href="/remove/{{this.item._id}}"><span class="ion-ios-close"></span></a></td>
+								<td class="product-remove"><a href="/cart/remove/{{this.item._id}}"><span class="ion-ios-close"></span></a></td>
 
 								<td class="image-prod">
 									<div class="img" style="background-image:url({{this.img}});"></div>
@@ -150,7 +150,7 @@
 					<span>&#8363;{{totalPrice}}</span>
 				</p>
 			</div>
-			<p><a href="/thanh-toan" class="btn btn-primary py-3 px-4">Chuyển sang thanh toán</a></p>
+			<p><a href="/cart/thanh-toan" class="btn btn-primary py-3 px-4">Chuyển sang thanh toán</a></p>
 		</div>
 	</div>
 	</div>
