--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -96,8 +96,9 @@
           <li class="nav-item"><a href="/users/dang-ki" class="nav-link">Đăng kí</a></li>
           {{/if}}
 
-          <li class="nav-item cta cta-colored"><a href="/gio-hang" class="nav-link"><span
-                class="icon-shopping_cart"></span><span id="totalQtyCart">0</span></a></li>
+          <li class="nav-item cta cta-colored"><a href="/cart/gio-hang" class="nav-link"><span
+                class="icon-shopping_cart"></span>[{{session.cart.totalQty}}]</a></li>
+
         </ul>
       </div>
     </div>
