--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,15 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155057122-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155057122-1');
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
 
@@ -38,6 +47,7 @@
   <link rel="stylesheet" href="/css/flaticon.css">
   <link rel="stylesheet" href="/css/icomoon.css">
   <link rel="stylesheet" href="/css/style.css">
+  
 </head>
 
 <body class="goto-here">
